--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -44,7 +44,7 @@
                                     {% set cartItemPrice = cartItemPrices[index] %}
                                     {% set cartItemUrl = url('front_product_detail', {id: cartItem.product.id}) %}
                                     <div class="table-cart__row js-cart-item js-maximum-amount-container">
-                                        <div class="table-cart__content{% if cartItem.product.isPohodaProductTypeSet %} table-cart__content--sets{% endif %}">
+                                        <div class="table-cart__content{% if cartItem.product.isPohodaProductTypeSet or cartItem.product.isSupplierSet %} table-cart__content--sets{% endif %}">
                                             <div class="table-cart__cell table-cart__cell--info">
                                                 <a href="{{ cartItemUrl }}" title="{{ cartItem.product.name }}">
                                                     {% if cartItem.product.isPohodaProductTypeSet %}
@@ -52,6 +52,14 @@
                                                             {% for productSet in cartItem.product.productSets %}
                                                                 <div class="table-cart__cell__image table-cart__cell__image--sets svg svg-plus-big">
                                                                     {{ image(productSet.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
+                                                                </div>
+                                                            {% endfor %}
+                                                        </div>
+                                                    {% elseif cartItem.product.isSupplierSet %}
+                                                        <div class="table-cart__cell__wrap-image">
+                                                            {% for image in getSupplierSetImagesExcludingMain(cartItem.product) %}
+                                                                <div class="table-cart__cell__image table-cart__cell__image--sets svg svg-plus-big">
+                                                                    {{ image(image, {size: 'thumbnail'}) }}
                                                                 </div>
                                                             {% endfor %}
                                                         </div>
