--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -37,6 +37,8 @@
                             <div class="box-filter js-product-filter">
                                 {% if isSaleCategory %}
                                     {% set categoryUrl = url('front_sale_product_list', { id: category.id }) %}
+                                {% elseif isSaleCategory %}
+                                    {% set categoryUrl = url('front_news_product_list', { id: category.id }) %}
                                 {% else %}
                                     {% set categoryUrl = url('front_product_list', { id: category.id }) %}
                                 {% endif %}
