--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -57,10 +57,11 @@
                         </div>
                     {% endif %}
 
-                    <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
+                    <div class="box-list__content js-product-list-ajax-filter-products-with-controls">         
                         {% if visibleChildren is not empty %}
                             {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category} %}
                         {% endif %}
+                        {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category, 'type': constant('App\\Controller\\Front\\BestsellingProductController::TYPE_VERTICAL')})) }}
                         {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
                         <div class="box-list__products">
                             {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: filterFormSubmitted} %}
