Gift certificate PDFs are now created just for a moment and deleted immediately after the email is sent.

--- a/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
+++ b/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
@@ -9,5 +9,8 @@
         <b>{{ giftCertificateCode }}</b>
     </p>
     <p>Hodnota: <b>{{ giftCertificateValue|priceWithCurrency(giftCertificateCurrency) }}</b></p>
+    {% if giftCertificateValidTo is not empty %}
+        <p>Platný do: <b>{{ giftCertificateValidTo|formatDateTime }}</b></p>
+    {% endif %}
 </body>
 </html>
