Added information about setting pohoda ids to orders to migrations guide

--- a/templates/Admin/Content/Superadmin/migrations.html.twig
+++ b/templates/Admin/Content/Superadmin/migrations.html.twig
@@ -111,6 +111,9 @@
 				</td>
                 <td>
                     Objednávkám se nastaví, že byly již exportovány do Pohody - <strong>Je tedy třeba objednávky nejprve exportovat do Pohody</strong>
+                    <br>
+                    <br>
+                    Po dokončení migrace je potřeba spustit <pre>php bin/console shopsys:import:legacy-orders-pohoda-id</pre> pro provázání objednávek z posledních 30 dnů s Pohodou.
                 </td>
 			</tr>
 			<tr>
