--- a/templates/Front/Content/Order/sent.html.twig
+++ b/templates/Front/Content/Order/sent.html.twig
@@ -54,4 +54,10 @@
         </div>
     </div>
 
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/Heureka/reviews.html.twig' with { reviews: heurekaReviews } %}
+        </div>
+    </div>
+
 {% endblock %}
