--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -101,6 +101,12 @@
         </div>
     </div>
 
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/Heureka/reviews.html.twig' with { reviews: heurekaReviews } %}
+        </div>
+    </div>
+
     {% block last_visited_products %}
         {{ render(controller('App\\Controller\\Front\\LastVisitedProductsController:showAction')) }}
     {% endblock %}
